--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first web page</title>
+    <title>My first web page!</title>
 </head>
 <body>
-    Hello, world!
-    Welcome to my first webpage!
+    <p>Hello, world!</p>
+    <p>Welcome to my first webpage!</p>
 </body>
 </html>
