adding inline elements and images

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -6,12 +6,23 @@
     <title>My favorite things </title>
 </head>
 <body>
-    <h>My favorite Things</h>
+    <h>My favorite <strong>Things</strong></h>
     <ol>
-        <li>My phone</li>
+        <li>My phone</li> <img src="images/phone.jpeg" alt=" my phone">
         <li>My Laptop</li>
         <li>My watch</li>
     </ol>
+    <ul>
+        <li>Kevin</li>
+        <li>Regan</li>
+        <li>Rono</li>
+    </ul>
+    <ol>
+        <li>Githeri</li>
+        <li>samosa</li>
+        <li>fish</li>
+    </ol>
+    <p>Those are my most favorite things</p>
     
 </body>
 </html>
