--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -22,7 +22,7 @@
         <li>samosa</li>
         <li>fish</li>
     </ol>
-    <p>Those are my most favorite things</p>
+    <p> <em>Those are my most favorite things</em></p>
     
 </body>
 </html>
