--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My favorite things </title>
+    <link rel="stylesheet" href="/css/my-favorite-things.css">
 </head>
+
 <body>
     <h>My favorite <strong>Things</strong></h>
     <ol>
@@ -23,6 +26,7 @@
         <li>fish</li>
     </ol>
     <p> <em>Those are my most favorite things</em></p>
-    
+
 </body>
+
 </html>
